# KidsMind-temp

./: .env.example  .gitignore  AGENTS.md  API.md  Mismatch.md  README.md  REGISTER.md  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.yml
Services/AI/app/: .env.example  main.py  pyproject.toml
Services/AI/app/ai/: dev_moderation.py  moderation.py  prompts.py
Services/AI/app/controllers/: chat_controller.py
Services/AI/app/core/: cache_client.py  config.py  llm.py  logging_setup.py
Services/AI/app/routers/: ai.py  chat_router.py
Services/AI/app/schemas/: ChatRequest.py  llm_response.py
Services/AI/app/services/: ai_service.py  build_chain.py  dev_moderation.py  history.py  moderation.py  prompts.py
Services/AI/app/utils/: age_guidelines.py  auth.py  get_model_encoder.py  llm_json_parsing.py  prompt.py  token_count.py  trim_messages_by_tokens.py  validate_token_limit.py
Services/api/app/: .env.example  README.md  main.py  pyproject.toml
Services/api/app/controllers/: auth.py  badge_admin.py  chat.py  chat_controller.py  children.py  controller_guard.py  media.py  parent_notification.py  quiz.py  safety_and_rules.py  voice.py
Services/api/app/core/: cache_client.py  config.py  database.py  error_handlers.py  llm.py  logging_setup.py  rate_limit_policy.py  storage.py
Services/api/app/crud/: __init__.py  crud_child_profiles.py  crud_child_rules.py
Services/api/app/dependencies/: auth.py  authentication.py  infrastructure.py  media.py  request_security.py  (+1 more)
Services/stt/app/: .env.example  exceptions.py  main.py  pyproject.toml
(+613 files in other folders)
