[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.5",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "slowapi>=0.1.9",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
]
