[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.5",
    "httpx>=0.28.1",
    "minio>=7.2.20",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.40.0",
]
