[project]
name = "stt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "ctranslate2>=4.7.1",
    "fastapi>=0.128.7",
    "faster-whisper>=1.2.1",
    "numpy>=2.4.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
